--- a/Novess Website/message.html
+++ b/Novess Website/message.html
@@ -20,7 +20,7 @@
 		</a>
 		<ul class="side-menu top">
 			<li>
-				<a href="dashboard.html">
+				<a href="index.html">
 					<i class='bx bxs-dashboard' ></i>
 					<span class="text">Dashboard</span>
 				</a>
