--- a/Novess Website/analytics.html
+++ b/Novess Website/analytics.html
@@ -21,7 +21,7 @@
 		</a>
 		<ul class="side-menu top">
 			<li>
-				<a href="dashboard.html">
+				<a href="index.html">
 					<i class='bx bxs-dashboard' ></i>
 					<span class="text">Dashboard</span>
 				</a>
